# tauri-sandbox

./: tauri-sandbox.code-workspace
sandbox/: .gitignore  README.md  index.html  notes.md  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  vite.config.ts
sandbox/frame-glue/: package.json  tsconfig.tsbuildinfo
sandbox/frame-glue/lib/: index.d.ts  index.js
sandbox/frame-glue/src/: overrideCookie.ts
sandbox/src/: envs.ts  main.ts  overrideLocalStorage.ts
sandbox/src/proxy-sw/: Interface.ts  sw.ts
sandbox/subdomain/: index.html  package.json  vite.config.ts
tauri-app/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
tauri-app/dist-isolation/: index.js
tauri-app/frame-glue/: .prettierignore  eslint.config.js  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
tauri-app/frame-glue/coverage/: coverage-final.json  index.html
tauri-app/frame-glue/lib/: domReplacement.d.ts  index.js  localStorage.d.ts  overrideCookie.d.ts
tauri-app/frame-glue/src/: SetupCrossthreadedPorts.ts  domReplacement.ts  index.ts  localStorage.ts  overrideCookie.ts  proxiedEventTarget.ts  rpcOverPorts.test.ts  rpcOverPorts.ts
tauri-app/src/: dateBreaker.js  envs.ts  initialIframe.ts  main.ts  overrideLocalStorage.ts  sandbox.ts  style.css  sw.ts
tauri-app/src-old/: main-old.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/database/: Cargo.toml  RFC.md
tauri-app/src-tauri/socks5/: Cargo.toml
tauri-app/src-tauri/socks5/src/: addr.rs  cmd.rs  error.rs  lib.rs  proxy.rs  request.rs  response.rs  server.rs
tauri-app/src-tauri/src/: lib.rs  main.rs  subdomain.rs
tauri-app/src/idbHandlers/: closeDatabase.ts  (+8 more)
tauri-app/subdomain/: .env  index.html  tsconfig.json
(+685 files in other folders)
