[package]
    name        = "tauri-app"
    version     = "0.1.0"
    description = "A Tauri App"
    authors     = ["zphrs"]
    edition     = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    # The `_lib` suffix may seem redundant but it is necessary
    # to make the lib name unique and wouldn't conflict with the bin name.
    # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
    name       = "tauri_app_lib"
    crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
    tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
    tauri = { version = "2", features = [ "isolation",
        "unstable",
        "macos-proxy",
        "devtools",
    ] }
    tauri-plugin-opener = "2"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    fast-socks5 = "0.10.0"
    tokio = "1.46.1"
    log = "0.4.27"
    thiserror = "2.0.12"
    protocol = "3.4.0"
    socks5 = { version = "0.1.0", path = "socks5" }
    tauri-plugin-log = "2"
    tiny_http = "0.12.0"
