[package]
    name    = "socks5"
    version = "0.1.0"
    edition = "2024"

[dependencies]
    log = "0.4.27"

    thiserror = "2.0.12"
    tokio     = { version = "1.46.1", features = ["io-util", "net", "rt", "time"] }

[dev-dependencies]
    async-log = "2.0.0"
    pretty_env_logger = "0.5.0"
    tokio = { version = "1.46.1", features = [
        "io-util",
        "net",
        "rt",
        "time",
        "macros",
    ] }
